<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerUserActivity">

    <ImageButton
        android:id="@+id/btnBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        app:srcCompat="@drawable/outline_reply_black_48"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="570dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/logo1"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="41dp" />

    <EditText
        android:id="@+id/etEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/outline_email_black_24"
        android:drawablePadding="18dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="177dp" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/outline_password_black_24"
        android:drawablePadding="18dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="246dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/outline_location_on_black_24"
        android:drawablePadding="18dp"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="324dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/outline_location_on_black_24"
        android:drawablePadding="18dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="396dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/next"
        android:textColor="@color/black"
        app:cornerRadius="100dp"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="496dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerUser"
        android:textColor="@color/black"
        android:textSize="24dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="75dp" />

</androidx.constraintlayout.widget.ConstraintLayout>